// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Bookmark renders bookmark not selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-5"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-11"
  >
    <span
      className="MuiButtonBase-root-30 MuiIconButton-root-24 MuiPrivateSwitchBase-root-20 MuiSwitch-switchBase-14 Bookmark-colorSwitchBase-1 MuiSwitch-colorPrimary-16"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-29"
      >
        <span
          className="MuiSwitch-icon-12"
        />
        <input
          checked={false}
          className="MuiPrivateSwitchBase-input-23"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </span>
    <span
      className="MuiSwitch-bar-19 Bookmark-colorBar-2"
    />
  </span>
  <span
    className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-10 Bookmark-label-4"
  >
    Bookmark
  </span>
</label>
`;

exports[`Tests for Bookmark renders bookmark selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root-5"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root-11"
  >
    <span
      className="MuiButtonBase-root-30 MuiIconButton-root-24 MuiPrivateSwitchBase-root-20 MuiSwitch-switchBase-14 Bookmark-colorSwitchBase-1 MuiSwitch-colorPrimary-16 MuiPrivateSwitchBase-checked-21 MuiSwitch-checked-15 Bookmark-colorChecked-3"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-29"
      >
        <span
          className="MuiSwitch-icon-12 MuiSwitch-iconChecked-13"
        />
        <input
          checked={true}
          className="MuiPrivateSwitchBase-input-23"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </span>
    <span
      className="MuiSwitch-bar-19 Bookmark-colorBar-2"
    />
  </span>
  <span
    className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-10 Bookmark-label-4"
  >
    Bookmark
  </span>
</label>
`;
